--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/the-application",
+            "outputPath": "docs",
             "index": "projects/the-application/src/index.html",
             "main": "projects/the-application/src/main.ts",
             "polyfills": "projects/the-application/src/polyfills.ts",
@@ -25,7 +25,8 @@
             "aot": true,
             "assets": [
               "projects/the-application/src/favicon.ico",
-              "projects/the-application/src/assets"
+              "projects/the-application/src/assets",
+              "projects/the-application/src/manifest.webmanifest"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
@@ -60,7 +61,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "projects/the-application/ngsw-config.json"
             }
           }
         },
@@ -90,7 +93,8 @@
             "karmaConfig": "projects/the-application/karma.conf.js",
             "assets": [
               "projects/the-application/src/favicon.ico",
-              "projects/the-application/src/assets"
+              "projects/the-application/src/assets",
+              "projects/the-application/src/manifest.webmanifest"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
@@ -105,7 +109,8 @@
             "tsConfig": [
               "projects/the-application/tsconfig.app.json",
               "projects/the-application/tsconfig.spec.json",
-              "projects/the-application/e2e/tsconfig.json"
+              "projects/the-application/e2e/tsconfig.json",
+              "projects/the-application/tsconfig.server.json"
             ],
             "exclude": ["**/node_modules/**"]
           }
@@ -119,6 +124,41 @@
           "configurations": {
             "production": {
               "devServerTarget": "the-application:serve:production"
+            }
+          }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "server",
+            "main": "projects/the-application/src/main.server.ts",
+            "tsConfig": "projects/the-application/tsconfig.server.json"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "projects/the-application/src/environments/environment.ts",
+                  "with": "projects/the-application/src/environments/environment.prod.ts"
+                }
+              ],
+              "sourceMap": false,
+              "optimization": true
+            }
+          }
+        },
+        "app-shell": {
+          "builder": "@angular-devkit/build-angular:app-shell",
+          "options": {
+            "browserTarget": "the-application:build",
+            "serverTarget": "the-application:server",
+            "route": "shell"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "the-application:build:production",
+              "serverTarget": "the-application:server:production"
             }
           }
         }
