--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mortgage-calculator",
+  "name": "amortization-calculator",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -15,27 +15,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
+    "@angular/animations": "~10.1.4",
     "@angular/cdk": "^10.2.3",
-    "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
-    "@angular/core": "~10.0.11",
-    "@angular/forms": "~10.0.11",
+    "@angular/common": "~10.1.4",
+    "@angular/compiler": "~10.1.4",
+    "@angular/core": "~10.1.4",
+    "@angular/forms": "~10.1.4",
     "@angular/material": "^10.2.3",
-    "@angular/platform-browser": "~10.0.11",
-    "@angular/platform-browser-dynamic": "~10.0.11",
-    "@angular/router": "~10.0.11",
-    "rxjs": "~6.5.5",
+    "@angular/platform-browser": "~10.1.4",
+    "@angular/platform-browser-dynamic": "~10.1.4",
+    "@angular/platform-server": "~10.1.4",
+    "@angular/router": "~10.1.4",
+    "@angular/service-worker": "~10.1.4",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.8",
-    "@angular/cli": "~10.0.7",
-    "@angular/compiler-cli": "~10.0.11",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "~0.1001.4",
+    "@angular/cli": "~10.1.4",
+    "@angular/compiler-cli": "~10.1.4",
+    "@angular/localize": "^10.1.4",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
